--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,20 @@ h1 {
   margin-left: 20px;
 }
 
+nav {
+  float: left;
+  width: 30%;
+  height: 300px;
+  background: #ccc;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
 section::after {
 	content: "";
 	display: table;
