--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,8 @@
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
+body {
+  background-color: lightblue;
 }
 
-li a {
-  display: block;
-  width: 60px;
-  background-color: #dddddd;
+h1 {
+  color: navy;
+  margin-left: 20px;
 }
