--- a/Website/style.css
+++ b/Website/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lightgreen;
+  background-color: lightgray;
 }
 
 ul {
@@ -13,11 +13,21 @@ ul {
   overflow: auto;
 }
 
+li img{
+  width: 30px;
+  height: 30px;
+  float: left;
+  padding-right: 10px;
+  padding-left: 15px;
+  padding-top: 5px;
+  margin-left: 5px;
+}
+
 li a {
   display: block;
   color: #000;
   padding: 8px 16px;
-  padding-left: 30px;
+  padding-left: 60px;
   text-align: left;
   text-decoration: none;
 }
@@ -27,7 +37,24 @@ li a.active {
   color: white;
 }
 
-li a:hover:not(.active) {
-  background-color: #555;
-  color: white;
+li a:hover {
+  background-color: lightgreen;
+  color: black;
+}
+
+h1{
+  font-size: 25px;
+  color: green;
+  padding-top: 40px;
+  padding-right: 40px;
+  padding-bottom: 50px;
+  padding-left: 15px;
+}
+
+h1 img{
+  width: 70px;
+  height: 70px;
+  float: left;
+  padding-right: 10px;
+
 }
