--- a/Website/style.css
+++ b/Website/style.css
@@ -2,12 +2,16 @@ body {
   background-color: lightgray;
 }
 
+.leftcolumn{
+  padding: 1%;
+}
+
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-  width: 25%;
-  background-color: #f1f1f1;
+  width: 14%;
+  background-color: #f6f6f6;
   position: fixed;
   height: 100%;
   overflow: auto;
@@ -17,18 +21,17 @@ li img{
   width: 30px;
   height: 30px;
   float: left;
-  padding-right: 10px;
-  padding-left: 15px;
+  padding-left: 30px;
   padding-top: 5px;
-  margin-left: 5px;
 }
 
 li a {
   display: block;
   color: #000;
   padding: 8px 16px;
-  padding-left: 60px;
-  text-align: left;
+  padding: 10px;
+  margin-left: 75px;
+  text-align: justify;
   text-decoration: none;
 }
 
@@ -42,12 +45,12 @@ li a:hover {
   color: black;
 }
 
-h1{
+h1 {
   font-size: 25px;
   color: green;
   padding-top: 40px;
   padding-right: 40px;
-  padding-bottom: 50px;
+  padding-bottom: 45px;
   padding-left: 15px;
 }
 
@@ -55,6 +58,33 @@ h1 img{
   width: 70px;
   height: 70px;
   float: left;
-  padding-right: 10px;
+  padding-right: 15px;
+  padding-left: 5px;
 
+}
+
+.boxleft{
+  width: 55%;
+  height: 44%;
+  border: 5px;
+  float:right;
+  box-shadow: 2px 6px 15px rgba(0,0,0,0.1);
+  background-color: #f1f1f1;
+  text-align: center;
+  position: absolute;
+  top: 2.8%;
+  left: 17%;
+}
+
+.boxright{
+  width: 25%;
+  height: 44%;
+  border: 5px;
+  float:right;
+  box-shadow: 2px 6px 15px rgba(0,0,0,0.1);
+  background-color: #f1f1f1;
+  text-align: center;
+  position: absolute;
+  top: 2.8%;
+  right: 2%;
 }
