--- a/Website/style.css
+++ b/Website/style.css
@@ -18,17 +18,16 @@ ul {
 }
 
 li img{
-  width: 30px;
-  height: 30px;
+  width: 13%;
+  height: 13%;
   float: left;
-  padding-left: 30px;
-  padding-top: 5px;
+  padding-left: 12%;
+  padding-top: 3%;
 }
 
 li a {
   display: block;
   color: #000;
-  padding: 8px 16px;
   padding: 10px;
   margin-left: 75px;
   text-align: justify;
