--- a/CSS/HomeCss.css
+++ b/CSS/HomeCss.css
@@ -1,7 +1,7 @@
 *
 {
     margin: 0;
-    padding: 0;
+    padding: 0.3%;
     box-sizing: border-box;
 }
 
@@ -16,7 +16,7 @@ body
     position: fixed;
     width: 20%;
     height: 100%;
-    background: #feffde;
+    background: white;
 }
 
 .LeftSide .Logo img
@@ -32,10 +32,11 @@ body
 .LeftSide .Menu ul
 {
     position: absolute;
-    padding-top: 60%;
+    padding-top: 70%;
     top: 0;
     left: 0;
     width: 100%;
+    padding-left: 8%;
 }
 
 .LeftSide .Menu ul li
@@ -47,7 +48,8 @@ body
 
 .LeftSide .Menu ul li:hover
 {
-    background: #52734d;
+    background: lightgreen;
+    color: black;
 }
 
 .LeftSide .Menu ul li a
@@ -69,7 +71,7 @@ body
     display: block;
     display: flex;
     text-decoration: none;
-    color: #feffde;
+    color: black;
 }
 
 .LeftSide .Menu ul li a img
@@ -92,4 +94,29 @@ body
     line-height: 15%;
     text-align: center;
     white-space: nowrap;
+}
+
+.boxleft{
+  width: 50%;
+  height: 44%;
+  float:right;
+  box-shadow: 2px 6px 15px rgba(0,0,0,0.1);
+  background-color: white;
+  text-align: center;
+  position: absolute;
+  top: 1.3%;
+  left: 21.4%;
+}
+
+.boxright
+{
+  width: 27%;
+  height: 44%;
+  float:right;
+  box-shadow: 2px 6px 15px rgba(0,0,0,0.1);
+  background-color: white;
+  text-align: center;
+  position: absolute;
+  top: 1.3%%;
+  right: 1%;
 }
