--- a/CSS/HomeCss.css
+++ b/CSS/HomeCss.css
@@ -8,7 +8,7 @@
 body
 {
     min-height: 100vh;
-    background: #52734d;
+    background: lightgray;
 }
 
 .LeftSide
@@ -96,7 +96,19 @@ body
     white-space: nowrap;
 }
 
-.boxleft{
+.Greetings
+{
+  width: 50%;
+  height: 44%;
+  position: absolute;
+  top: 0.3%;
+  left: 21.4%;
+  font-size: 70%;
+  text-align: left;
+}
+
+.CropProduction
+{
   width: 50%;
   height: 44%;
   float:right;
@@ -104,11 +116,11 @@ body
   background-color: white;
   text-align: center;
   position: absolute;
-  top: 1.3%;
+  top: 8%;
   left: 21.4%;
 }
 
-.boxright
+.AreaOfFarmland
 {
   width: 27%;
   height: 44%;
@@ -117,6 +129,32 @@ body
   background-color: white;
   text-align: center;
   position: absolute;
-  top: 1.3%%;
+  top: 8%;
+  right: 1%;
+}
+
+.Weather
+{
+  width: 27%;
+  height: 44%;
+  float:right;
+  box-shadow: 2px 6px 15px rgba(0,0,0,0.1);
+  background-color: white;
+  text-align: center;
+  position: absolute;
+  bottom: 3%;
+  left: 21.4%;
+}
+
+.Forum
+{
+  width: 50%;
+  height: 44%;
+  float:right;
+  box-shadow: 2px 6px 15px rgba(0,0,0,0.1);
+  background-color: white;
+  text-align: center;
+  position: absolute;
+  bottom: 3%;
   right: 1%;
 }
