--- a/CSS/Crop.css
+++ b/CSS/Crop.css
@@ -106,3 +106,45 @@ body
   font-size: 70%;
   text-align: left;
 }
+
+.HighlandCrops
+{
+  width: 30%;
+  height: 90%;
+  float:right;
+  box-shadow: 2px 6px 15px rgba(0,0,0,0.1);
+  background-color: white;
+  text-align: center;
+  position: absolute;
+  top: 7%;
+  left: 21.4%;
+  border-radius: 30px 30px 30px 30px;
+}
+
+.CropsInfo
+{
+  width: 46%;
+  height: 44%;
+  float:right;
+  box-shadow: 2px 6px 15px rgba(0,0,0,0.1);
+  background-color: white;
+  text-align: center;
+  position: absolute;
+  top: 7%;
+  right: 1%;
+  border-radius: 30px 30px 30px 30px;
+}
+
+.ProductionVolume
+{
+  width: 46%;
+  height: 44%;
+  float:right;
+  box-shadow: 2px 6px 15px rgba(0,0,0,0.1);
+  background-color: white;
+  text-align: center;
+  position: absolute;
+  bottom: 3%;
+  right: 1%;
+  border-radius: 30px 30px 30px 30px;
+}
