--- a/CSS/Database.css
+++ b/CSS/Database.css
@@ -106,3 +106,17 @@ body
   font-size: 70%;
   text-align: left;
 }
+
+.Something
+{
+  width: 75%;
+  height: 90%;
+  float:right;
+  box-shadow: 2px 6px 15px rgba(0,0,0,0.1);
+  background-color: white;
+  text-align: center;
+  position: absolute;
+  top: 8%;
+  left: 22.5%;
+  border-radius: 30px 30px 30px 30px;
+}
