--- a/CSS/Crop.css
+++ b/CSS/Crop.css
@@ -121,6 +121,56 @@ body
   border-radius: 30px 30px 30px 30px;
 }
 
+.HighlandCrops .CropsMenu
+{
+    padding-top: 20px;
+
+}
+
+.HighlandCrops .CropsMenu ul
+{
+    position: absolute;
+    padding-top: 20px;
+    width: 100%;
+    height: 85%;
+    overflow-y: auto;
+}
+
+.HighlandCrops .CropsMenu ul li
+{
+    position: relative;
+    width: 100%;
+    list-style: none;
+}
+
+.HighlandCrops .CropsMenu ul li:hover
+{
+    background: lightgreen;
+    color: black;
+}
+
+.HighlandCrops .CropsMenu ul li a
+{
+    position: relative;
+    padding: 3%;
+    width: 100%;
+    display: block;
+    text-decoration: none;
+    color: #52734d;
+}
+
+.HighlandCrops .CropsMenu ul li a .Clist
+{
+    position: relative;
+    display: block;
+    padding: 7%;
+    height: 15%;
+    font-size: 120%;
+    line-height: 15%;
+    text-align: center;
+    white-space: nowrap;
+}
+
 .CropsInfo
 {
   width: 46%;
