--- a/CSS/HomeCss.css
+++ b/CSS/HomeCss.css
@@ -74,6 +74,12 @@ body
     color: black;
 }
 
+.LeftSide .Menu ul li a.active
+{
+    background-color: lightgreen;
+    color: black;
+}
+
 .LeftSide .Menu ul li a img
 {
     position: relative;
