--- a/CSS/css.css
+++ b/CSS/css.css
@@ -59,7 +59,7 @@ header{
 
 nav{
     float: right;
-    line-height: 100px;
+    margin-top: 30px;
 }
 nav li{
     list-style-type: none;
@@ -70,7 +70,7 @@ nav li a{
     font-family: var(--NavigationFont);
     letter-spacing: 4px;
     font-size: 20px;
-    margin: 15px;
+    margin: 20px;
     color: var(--NavigationTxtColor);
 }
 nav .MMlist::after {
@@ -82,8 +82,9 @@ nav .MMlist::after {
     transition: width .3s;
 }
 nav .MMlist:hover::after {
-    width: 100%;
+    width: 80%;
     transition: width .3s;
+    margin-left: 15%;
 }
 
 
@@ -197,7 +198,7 @@ nav .MMlist:hover::after {
     font-family: var(--VegsMenuFont);
     letter-spacing: 4px;
     font-size: 20px;
-    margin: 15px;
+    margin: 20px;
     color: var(--VegsMenuTxtColor);
 }
 .Contents .HighlandCrops .VegsMenu ul li a .VegsList
@@ -219,8 +220,9 @@ nav .MMlist:hover::after {
     transition: width .3s;
 }
 .Contents .HighlandCrops .VegsMenu ul li a :hover::after {
-    width: 100%;
+    width: 80%;
     transition: width .3s;
+    margin-left: 15%;
 }
 
 .Contents .VegtableInfo{
@@ -265,7 +267,7 @@ nav .MMlist:hover::after {
     font-family: var(--MonthsMenuFont);
     letter-spacing: 4px;
     font-size: 20px;
-    margin: 15px;
+    margin: 20px;
     color: var(--MonthsMenuTxtColor);
 }
 .Contents .Months .MonthsMenu ul li a .MonthsList
@@ -287,8 +289,9 @@ nav .MMlist:hover::after {
     transition: width .3s;
 }
 .Contents .Months .MonthsMenu ul li a :hover::after {
-    width: 100%;
+    width: 80%;
     transition: width .3s;
+    margin-left: 15%;
 }
 
 .Contents .MonthInfo{
