--- a/CSS/css.css
+++ b/CSS/css.css
@@ -117,6 +117,8 @@ nav .MMlist:hover::after {
 	top: 450px;
 	height: 1500px;
 }
+
+/*Weather*/
 .Contents .Weather{
 	background: var(--WeatherBG);
 }
@@ -133,10 +135,11 @@ nav .MMlist:hover::after {
 }
 .Contents .Chart p {
 	padding: 2% 0px;
-	font-family: poppins;
+	font-family: poppins;   
 	line-height: 30px;
 }
 
+/*Area of Farmland*/
 .Contents .AreaOfFarmland{
     background: var(--AreaOfFarmlandBG);
 }
@@ -153,6 +156,8 @@ nav .MMlist:hover::after {
 	line-height: 30px;
 }
 
+
+/*Announcement*/
 .Contents .Announcements{
     background: var(--AnnouncementsBG);
 }
@@ -170,7 +175,7 @@ nav .MMlist:hover::after {
 }
 
 
-
+/*Highland Crops*/
 .Contents .HighlandCrops{
     background: var(--HighlandCropsBG);
 }
@@ -239,7 +244,7 @@ nav .MMlist:hover::after {
 }
 
 
-
+/*Season*/
 .Contents .Months{
     background: var(--SeasonsContentBG);
 }
