--- a/CSS/css.css
+++ b/CSS/css.css
@@ -46,11 +46,11 @@ header{
 
 .Logo{
     width: 30%;
-    float: left;
+    text-align: left;
+    float: left;    
     line-height: 100px;
 }
-.Logo a{
-    text-decoration: none;
+.Logo a{    
     font-size: 30px;
     font-family: var(--LogoFont);
     color: var(--LogoTxtColor);
@@ -122,17 +122,51 @@ nav .MMlist:hover::after {
 .Contents .WeatherSection{
 	background: var(--WeatherBG);
 }
-
+.WeatherSection .flex{
+    align-items: center;
+    display: flex;
+}
 .Contents .WeatherSection{
     font-family: poppins;
 	letter-spacing: 2px;
 	padding-top: 15px;
-    padding-left: 80px;
+    padding-left: 200px;
     padding-bottom: 15px;
 	font-size: 20px;
 	margin: 0;
     text-align: left;
 }
+.WeatherSection .card input.search-bar{
+    border: none;
+    outline: none;
+    padding: 0.3em;
+    border-radius: 24px;
+    color: black;
+    font-family: inherit;
+    font-size: 20px;
+    width: 30%;
+}
+.WeatherSection .card button {
+    margin: .5em;
+    border-radius: 50%;
+    border: none;
+    height: 43px;
+    width: 43px;
+    outline: none;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+button:hover{
+    background: lightgray;
+  }
+.WeatherSection .card .search img{
+  height:50%; 
+  width:50%;
+}
+.description {
+    text-transform: capitalize;
+}
+
 
 
 /*Chart*/
