--- a/CSS/css.css
+++ b/CSS/css.css
@@ -135,6 +135,8 @@ nav .MMlist:hover::after {
 	font-size: 20px;
 	margin: 0;
     text-align: left;
+    background-image: url("Sample.png");
+
 }
 .WeatherSection .card input.search-bar{
     border: none;
