--- a/CSS/css.css
+++ b/CSS/css.css
@@ -120,7 +120,7 @@ nav .MMlist:hover::after {
 
 /*Weather*/
 .Contents .WeatherSection{
-    background-image: url("Sample.png");
+	background: var(--WeatherBG);
 }
 .WeatherSection .flex{
     align-items: center;
@@ -135,7 +135,6 @@ nav .MMlist:hover::after {
 	font-size: 20px;
 	margin: 0;
     text-align: left;
-
 }
 .WeatherSection .card input.search-bar{
     border: none;
