--- a/CSS/css.css
+++ b/CSS/css.css
@@ -12,7 +12,7 @@
     --BannerBG: #fffdf6; 
     --BannerTxtColor: #494949; 
 
-    --WeatherBG: #ece8d9; 
+    --WeatherBG: url('../Images/Sample.png'); 
     --ChartBG: #fffdf6; 
     --AreaOfFarmlandBG: #ece8d9;
     --AnnouncementsBG: #fffdf6;
