--- a/CSS/css.css
+++ b/CSS/css.css
@@ -23,18 +23,15 @@
     --SeasonsContentBG: #fffdf6;
     --MonthsMenuFont: poppins;
     --MonthsMenuTxtColor:#494949;
-
 }
 
 body{
     text-align: center;
 }
-
 .Items{
     width: 1170px;
     margin: 0 auto;
 }
-
 header{
     height: 100px;
     background: var(--HeaderBG);
@@ -42,13 +39,11 @@ header{
     z-index: 12;
     position: fixed;
 }
-
-
 .Logo{
     width: 30%;
     text-align: left;
-    float: left;    
     line-height: 100px;
+    float: left;
 }
 .Logo a{    
     font-size: 30px;
@@ -58,8 +53,9 @@ header{
 }
 
 nav{
-    float: right;
     margin-top: 30px;
+    float: right;
+    text-align: right;
 }
 nav li{
     list-style-type: none;
@@ -131,9 +127,9 @@ nav .MMlist:hover::after {
 .Contents .WeatherSection{
     font-family: poppins;
 	letter-spacing: 2px;
-	padding-top: 15px;
+	padding-top: 50px;
     padding-left: 200px;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
 	font-size: 20px;
 	margin: 0;
     text-align: left;
