--- a/CSS/css.css
+++ b/CSS/css.css
@@ -180,6 +180,7 @@ button:hover{
 /*Chart*/
 .Contents .Chart{
     background: var(--ChartBG);
+    font-family: poppins;
 }
 .Contents .Chart h2 {
 	font-family: poppins;
@@ -191,6 +192,19 @@ button:hover{
 	padding: 2% 0px;
 	font-family: poppins;   
 	line-height: 30px;
+}
+.Chart .grid-container {
+    display: grid;
+    grid-template-areas:
+      'title title title title'
+      'chart chart description description';
+    grid-gap: 10px; 
+    padding: 10px;
+}
+.grid-container > div {
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
 }
 
 
