--- a/CSS/css.css
+++ b/CSS/css.css
@@ -197,43 +197,6 @@ button:hover{
     padding: 10px;  
 }
 
-
-/*Area of Farmland*/
-.Contents .AreaOfFarmland{
-    background: var(--AreaOfFarmlandBG);
-}
-.Contents .AreaOfFarmland h2 {
-	font-family: poppins;
-	letter-spacing: 4px;
-	padding-top: 30px;
-	font-size: 40px;
-	margin: 0;
-}
-.Contents .AreaOfFarmland p {
-	padding: 2% 0px;
-	font-family: poppins;
-	line-height: 30px;
-}
-
-
-/*Announcement*/
-.Contents .Announcements{
-    background: var(--AnnouncementsBG);
-}
-.Contents .Announcements h2 {
-	font-family: poppins;
-	letter-spacing: 4px;
-	padding-top: 30px;
-	font-size: 40px;
-	margin: 0;
-}
-.Contents .Announcements p {
-	padding: 2% 0px;
-	font-family: poppins;
-	line-height: 30px;
-}
-
-
 /*Highland Crops*/
 .Contents .HighlandCrops{
     background: var(--HighlandCropsBG);
@@ -387,6 +350,16 @@ button:hover{
 	padding: 2% 0px;
 	font-family: poppins;   
 	line-height: 30px;
+}
+.Municipalities .map-wrapper{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1700px;
+}
+
+.Municipalities .googlemap{
+    width: 100%;
 }
 
 /*GIS*/
