--- a/CSS/css.css
+++ b/CSS/css.css
@@ -34,32 +34,34 @@ body{
 /*Navigation Bar*/
 .navbar{
     display: flex;
+    position: relative;
     justify-content: space-between;
     align-items: center;
     background-color: #333;
     color: white;
     font-family: poppins;
     font-size: 1rem;
-    width: 100%;
-    position: fixed;
 }
 .brand-title{
     font-size: 1.5rem;
     margin: .5rem;
 }
+.navbar-links{
+    height: 100%;
+}
 .navbar-links ul{
+    display: flex;
     margin: 0;
     padding: 0;
-    display: flex;
 }
 .navbar-links li{
     list-style: none;
 }
 .navbar-links li a{
+    display: block;
     text-decoration: none;
     color: white;
     padding: 1rem;
-    display: block;
 }
 .navbar-links li:hover{
     background-color: #555;
@@ -81,6 +83,10 @@ body{
     border-radius: 10px;
 }
 @media (max-width: 960px){
+    .navbar{
+        flex-direction: column;
+        align-items: flex-start;
+    }
     .toggle-button{
         display: flex;
     }
@@ -88,24 +94,19 @@ body{
         display: none;
         width: 100%;
     }
-    .navbar{
-        flex-direction: column;
-        align-items: flex-start;
-    }
     .navbar-links ul{
         width: 100%;
         flex-direction: column;
     }
-    .navbar-links li{
+    .navbar-links ul li{
         text-align: center;
     }
-    .navbar-links li a{
+    .navbar-links ul li a{
         padding: .5rem 1rem;
     }
     .navbar-links.active{
         display: flex;
     }
-
 }
 
 
@@ -127,6 +128,7 @@ body{
 	font-family: poppins;
     font-size: 25px;
 }
+
 
 
 /*Weather*/
