--- a/CSS/css.css
+++ b/CSS/css.css
@@ -9,10 +9,10 @@
     --NavigationFont: poppins;
     --NavigationTxtColor:#494949;
 
-    --BannerBG: url('../Images/Frog.jpg'); 
+    --BannerBG: url('../Images/Polygon.jpg  '); 
     --BannerTxtColor: #494949; 
 
-    --WeatherBG: url('../Images/Sample.png'); 
+    --WeatherBG: #ece8d9; 
     --ChartBG: #fffdf6; 
     --MunicipalitiesBG: #ece8d9;
     --GISBG: #fffdf6;
@@ -72,8 +72,8 @@ body{
     color: white;
     padding: 1rem;
 }
-.navbar-links li:hover{
-    background-color: #555;
+.navbar-links li a:hover{
+    background-color: black;
 }
 .toggle-button{
     position: absolute;
@@ -124,15 +124,13 @@ body{
 
 /*Project ANI - Description*/
 .Banner{
-    background: var(--BannerBG);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    text-align: left;
-    padding-left: 150px;
+    height: 600px;
 }
 .Banner1{
     align-items: left;
+    position: absolute;
+    top: 10%;
+    left: 10%;
 }
 .Banner h2 {
 	padding-top: 100px;
@@ -147,19 +145,15 @@ body{
     font-size: 25px;
     color: white;
 }
-.Banner img{
-    margin-top: 70px;
-    margin-bottom: 20px;
-    margin-right: 200px;
-    width: 500px;
-    height: 500px;
+.Banner video{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
+
 @media (max-width:1000px){
     .brand-title{
         padding-left: 0rem;
-    }
-    .Banner img{
-        display: none;
     }
     .Banner1{
         text-align: center;
@@ -170,19 +164,38 @@ body{
 /*Weather*/
 .Contents .WeatherSection{
 	background: var(--WeatherBG);
-    height: 400px;
+    height: 450px;
+    font-family: poppins;
+	letter-spacing: 2px;
+    padding-left: 200px;
+    padding-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.Contents .WeatherSection .card{
+    border-radius: 30px;
+    background: #000000d0;
+    padding-top: 2em;
+    padding-left: 1em   ;
+    color: white;
+    width: 650px;
+    height: 360px;
+    
+}
+.Contents .WeatherSection .right{
+    margin-right: 150px;
+}
+/*Weather widget inside box*/
+.Contents .WeatherSection .inside{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%; 
 }
 .WeatherSection .flex{
     align-items: center;
     display: flex;
-}
-.Contents .WeatherSection{
-    font-family: poppins;
-	letter-spacing: 2px;
-	padding-top: 50px;
-    padding-left: 150px;
-    padding-bottom: 10px;
-    text-align: left;
 }
 .WeatherSection .card input.search-bar{
     border: none;
@@ -192,7 +205,7 @@ body{
     color: black;
     font-family: inherit;
     font-size: 20px;
-    width: 500px;
+    width: 400px;
     cursor: pointer;
     transition: 0.2s ease-in-out;
 }
@@ -213,7 +226,7 @@ input.search-bar:hover{
 .WeatherSection .card button:hover{
     background: lightgray;
   }
-.WeatherSection .card .search img{
+.WeatherSection .card .inside .search img{
   height:50%; 
   width:50%;
 }
